Fixed column layout to fit image on col-12 layout on iphone portrait mode, completed all changes for r2.

--- a/server/public/style.css
+++ b/server/public/style.css
@@ -153,13 +153,17 @@ body {
 /* iphone 6/7/8 portait */
 @media only screen and  (min-width: 0px) and (max-width: 600px) {
   .carousel-item > img {
-    height: 30vh;
-    width: 40vw;
+    height: 36vh;
+    width: 81vw;
   }
 
   .carousel {
-    height: 30vh;
-    width: 40vw;
+    height: 36vh;
+    width: 81vw;
+  }
+
+  .detailsImage{
+    height: 40vh;
   }
 
     .card-title{
